# patiencediff

./: .bzrignore  .codespellrc  .gitignore  .travis.yml  AUTHORS  CLAUDE.md  Cargo.toml  MANIFEST.in  README.rst  appveyor.yml  disperse.conf  disperse.toml  pyproject.toml  releaser.conf  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: pythonpackage.yml  pythonpublish.yml  wheels.yaml
patiencediff/: __init__.py  __main__.py  _patiencediff_c.c  _patiencediff_c.pyi  _patiencediff_py.py  _patiencediff_rs.pyi  test_patiencediff.py
src/: lib.rs
