[build-system]
requires = ["setuptools>=77.0.0", "setuptools-rust>=1.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patiencediff"
description = "Python implementation of the patiencediff algorithm"
readme = "README.rst"
maintainers = [{name = "Breezy Developers", email = "team@breezy-vcs.org"}]
license = "GPL-2.0-or-later"
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://www.breezy-vcs.org/"
Repository = "https://github.com/breezy-team/patiencediff"

[project.scripts]
patiencediff = "patiencediff.__main__:main"

[tool.setuptools]
packages = ["patiencediff"]
include-package-data = false

[tool.setuptools.package-data]
patiencediff = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "patiencediff.__version__"}

[tool.ruff.lint]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "ANN001",
    "ANN201",
    "ANN202",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "E501",
]

[tool.ruff]
target-version = "py38"
line-length = 79

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.optional-dependencies]
dev = [
    "ruff==0.13.2",
    "mypy>=1.0.0"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.cibuildwheel]
environment = {PATH="$HOME/.cargo/bin:$PATH"}
before-build = "pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --profile=minimal -y && rustup show"

[tool.cibuildwheel.linux]
skip = "*-musllinux_*"
archs = ["auto", "aarch64"]
before-build = "pip install -U setuptools-rust && yum -y install libatomic && curl https://sh.rustup.rs -sSf | sh -s -- --profile=minimal -y && rustup show"

[tool.cibuildwheel.macos]
archs = ["auto", "universal2", "x86_64", "arm64"]
before-all = "rustup target add x86_64-apple-darwin aarch64-apple-darwin"
skip = """\
    cp39-macosx_x86_64 cp39-macosx_universal2 \
    cp310-macosx_x86_64 cp310-macosx_universal2 \
    cp311-macosx_x86_64 cp311-macosx_universal2 \
    cp312-macosx_x86_64 cp312-macosx_universal2 \
    cp313-macosx_x86_64 cp313-macosx_universal2
    """
