[metadata]
description = Python implementation of the patiencediff algorithm
long-description = file:README.rst
maintainer = Breezy Developers
maintainer-email = team@breezy-vcs.org
license = GNU GPLv2 or later
homepage = https://www.breezy-vcs.org/
version = attr:patiencediff.__version__
classifiers =
    Development Status :: 6 - Mature
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
